# reflection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_reflection_headers.cmake  generate_reflection_headers.md  generate_reflection_headers.py  reflection.hpp  reflection.inl  vcpkg.json
.github/workflows/: build.yml  cmake.yml  gcc.yml  msvc.yml
putils/: reflection.hpp  reflection.inl
putils/tests/: reflection.tests.cpp
scripts/: build_clang_arguments.cmake  clang_helpers.py  generate_reflection_headers.cmake  generate_reflection_headers.md  generate_reflection_headers.py
scripts/tests/: expected.rpp  generate_reflection_headers_test.py  reflectible.hpp
tests/: reflection.tests.cpp
